[PN-19216] - Added X-Origin-Client-Id header to Init api
